# llm-from-scratch

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: logistic-regression.ipynb  tokenizer.ipynb
